--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,8 @@
         "psr-4": {
             "cccdl\\yunxin_sdk\\": "./src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "9.6.x-dev"
     }
 }
